--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
                 </ul>
             </header>
             <div class="maincontent">
-                <p>Hei</p>
-
+                <div class="innercontent">
+                    <p>Hei</p>
+                </div>
             </div>
             <footer>
                 
