--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Faq</title>
     <meta name="description" content="Basic Template">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" type="text/css" href="faq.css">
 </head>
 
