Updates and fixes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <div id="wrapper">
             <header>
+                <h1 class="centered">Student-Gaming</h1>
                 <ul class="header">
                     <li class="header"><a class="header" href="index.html">Main Page</a></li>
                     <li class="header"><a class="header" href="pages/articles.html">Articles</a></li>
@@ -23,7 +24,8 @@
                 </div>
             </div>
             <footer>
-                
+                <p>This is footer!</p>
+                <a class="footer" href="pages/about.html">About us/Contact us here</a>
             
             </footer>
         </div>
