--- a/pages/about.html
+++ b/pages/about.html
@@ -11,6 +11,7 @@
 <body>
     <div id="wrapper">
         <header>
+            <h1 class="centered">Student-Gaming</h1>
             <ul class="header">
                 <li class="header"><a class="header" href="../index.html">Main Page</a></li>
                 <li class="header"><a class="header" href="articles.html">Articles</a></li>
@@ -45,8 +46,8 @@
             </xml>
         </div>
         <footer>
-
-
+            <p>This is footer!</p>
+            <a class="footer" href="about.html">About us/Contact us here</a>
         </footer>
     </div>
 
