--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             </header>
             <div class="maincontent">
                 <div class="innercontent">
-                    <p>Hei</p>
+                    <h1>Welcome to Student-Gaming!</h1>
+                    <p>This is a website made by students for students.</p>
                 </div>
             </div>
             <footer>
