Added git ignore, working on servers

--- a/pages/servers.html
+++ b/pages/servers.html
@@ -1,33 +1,52 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Servers</title>
-        <meta name="description" content="Basic Template">
-        <link rel="stylesheet" href="../main.css">
-    </head>
-    <body>
-        <div id="wrapper">
-            <header>
-                <h1 class="centered">Student-Gaming</h1>
-                <ul class="header">
-                    <li class="header"><a class="header" href="../index.html">Main Page</a></li>
-                    <li class="header"><a class="header" href="articles.html">Articles</a></li>
-                    <li class="header"><a class="header" href="community.html">Community</a></li>
-                    <li class="header"><a class="header" href="servers.html">Servers</a></li>
-                    <li class="header"><a class="header" href="about.html">About us</a></li>
-                </ul>
-            </header>
-            <div class="maincontent">
-                <div class="innercontent">
-                    <p>Hei</p>
+
+<head>
+    <meta charset="utf-8">
+    <title>Servers</title>
+    <meta name="description" content="Basic Template">
+    <link rel="stylesheet" href="../main.css">
+</head>
+
+<body>
+    <div id="wrapper">
+        <header>
+            <h1 class="centered">Student-Gaming</h1>
+            <ul class="header">
+                <li class="header"><a class="header" href="../index.html">Main Page</a>
+                </li>
+                <li class="header"><a class="header" href="articles.html">Articles</a>
+                </li>
+                <li class="header"><a class="header" href="community.html">Community</a>
+                </li>
+                <li class="header"><a class="header" href="servers.html">Servers</a>
+                </li>
+                <li class="header"><a class="header" href="about.html">About us</a>
+                </li>
+            </ul>
+        </header>
+        <div class="maincontent">
+            <div class="innercontent">
+                <div id="menu">
+                    <select id="games">
+                        <option value="0">--Choose--</option>
+                        <option value="1">Binding of Isaac</option>
+                        <option value="2">Mass effect</option>
+                        <option value="3">Elder Scrolls V: Skyrim</option>
+                        <option value="4">League of Legends</option>
+                    </select>
                 </div>
+                <div id="servers">Choose game</div>
             </div>
-            <footer>
-                <p>This is footer!</p>
-                <a class="footer" href="about.html">About us/Contact us here</a>
-            </footer>
         </div>
-        
-    </body>
+        <footer>
+            <p>This is footer!</p>
+            <a class="footer" href="about.html">About us/Contact us here</a>
+        </footer>
+    </div>
+
+</body>
+
+<script type="text/javascript" src="js/servers.js"></script>
+
 </html>
