Stuff and things

--- a/pages/servers.html
+++ b/pages/servers.html
@@ -6,6 +6,7 @@
     <title>Servers</title>
     <meta name="description" content="Basic Template">
     <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="servers.css">
 </head>
 
 <body>
