fixed certain links and placed placeholders

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,56 +1,42 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>Faq</title>
-    <meta name="description" content="Basic Template">
-    <link rel="stylesheet" href="../main.css">
-    <link rel="stylesheet" type="text/css" href="faq.css">
-</head>
-
-<body>
-    <div id="wrapper">
-        <header>
-            <h1 class="centered">Student-Gaming</h1>
-            <ul class="header">
-                <li class="header"><a class="header" href="../index.html">Main Page</a></li>
-                <li class="header"><a class="header" href="articles.html">Articles</a></li>
-                <li class="header"><a class="header" href="community.html">Community</a></li>
-                <li class="header"><a class="header" href="servers.html">Servers</a></li>
-                <li class="header"><a class="header" href="about.html">About us</a></li>
-            </ul>
-        </header>
-        <div class="maincontent">
-
-            <h1>Frequently Asked Questions</h1>
-            <xml>
-                <faq>
-                    <questions>
-                        <question>What is the meaning of life?</question>
-                        <answer>42</answer>
-                    </questions>
-                    <questions>
-                        <question>Is there a god?</question>
-                        <answer>Who cares</answer>
-                    </questions>
-                    <questions>
-                        <question>What school are you attending?</question>
-                        <answer>NTNU</answer>
-                    </questions>
-                    <questions>
-                        <question>What course is this?</question>
-                        <answer>IT2805</answer>
-                    </questions>
-                </faq>
-
-            </xml>
+    <head>
+        <meta charset="utf-8">
+        <title>About Us</title>
+        <meta name="description" content="Basic Template">
+        <link rel="stylesheet" href="../main.css">
+    </head>
+    <body>
+        <div id="wrapper">
+            <header>
+                <h1 class="centered">Student-Gaming</h1>
+                <ul class="header">
+                    <li class="header"><a class="header" href="../index.html">Main Page</a></li>
+                    <li class="header"><a class="header" href="articles.html">Articles</a></li>
+                    <li class="header"><a class="header" href="community.html">Community</a></li>
+                    <li class="header"><a class="header" href="servers.html">Servers</a></li>
+                    <li class="header"><a class="header" href="about.html">About us</a></li>
+                </ul>
+            </header>
+            <div class="maincontent">
+                <div class="innercontent">
+                     <h1>About us</h1>
+        <img src="../img/totallyus.jpg" alt="This is totally us" width="400" height="300">
+        <p></p>
+        <p>We are a group of student gamers, who decided to make a gaming site specifically for students. Using a cutting-edge formula((fun_factor*hours_played)/price) we can with a high precision decide if a game is worth a purchase based on the average students budget. Currently our team is only three people, but we hope to expand as soon as we start bringing in some of that bling. Our current team is Lars, Petter and Erik.</p>
+        <h2>Team Members</h2>
+        <p><b>Lars:</b> wordsmith, game connoisseur and proud member of the master race. Started his gaming career at the rockroll age of 5, when  he was gifted a Nintendo 64 for christmas. As he got older he acquired a taste for the finesse and raw power of the computer and became a firm member of the master race. He is currently playing World of Warcraft, Magic the Gathering and the newly released Binding of Isaac: Rebirth. </p>
+        <p><b>Petter:</b> will write his own damn text</p>
+        <p><b>Erik:</b> as will Erik</p>
+					<a href="faq.html">FAQ here</a>
+                </div>
+				
+            </div>
+            <footer>
+                <p>This is footer!</p>
+                <a class="footer" href="pages/about.html">About us/Contact us here</a>
+            </footer>
         </div>
-        <footer>
-            <p>This is footer!</p>
-            <a class="footer" href="about.html">About us/Contact us here</a>
-        </footer>
-    </div>
-
-</body>
-
+        
+    </body>
 </html>
