--- a/pages/community.html
+++ b/pages/community.html
@@ -20,7 +20,7 @@
             </header>
             <div class="maincontent">
                 <div class="innercontent">
-                    <p>Hei</p>
+                    <h1>This is where we'll put up the community</h1>
                 </div>
             </div>
             <footer>
