--- a/pages/servers.html
+++ b/pages/servers.html
@@ -20,7 +20,7 @@
             </header>
             <div class="maincontent">
                 <div class="innercontent">
-                    <p>Hei</p>
+                    <h1>Put up servers for popular games here:</h1>
                 </div>
             </div>
             <footer>
