--- a/pages/servers.html
+++ b/pages/servers.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>Servers</title>
@@ -30,10 +31,10 @@
                 <div id="menu">
                     <select id="games">
                         <option value="0">--Choose--</option>
-                        <option value="1">Binding of Isaac</option>
+                        <option value="1">Counter Strike</option>
                         <option value="2">Mass effect</option>
-                        <option value="3">Elder Scrolls V: Skyrim</option>
-                        <option value="4">League of Legends</option>
+                        <option value="3">Minecraft</option>
+                        <option value="4">Call of Duty</option>
                     </select>
                 </div>
                 <div id="servers">Choose game</div>
