--- a/pages/servers.html
+++ b/pages/servers.html
@@ -32,12 +32,16 @@
                     <select id="games">
                         <option value="0">--Choose--</option>
                         <option value="1">Counter Strike</option>
-                        <option value="2">Mass effect</option>
+                        <option value="2">Battlefield 3</option>
                         <option value="3">Minecraft</option>
                         <option value="4">Call of Duty</option>
                     </select>
                 </div>
-                <div id="servers">Choose game</div>
+                <div id="servers">
+                
+                    <div id="servers-content">Choose game</div>
+
+                </div>
             </div>
         </div>
         <footer>
