Fixed faq stuff

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>Faq</title>
@@ -13,37 +14,43 @@
         <header>
             <h1 class="centered">Student-Gaming</h1>
             <ul class="header">
-                <li class="header"><a class="header" href="../index.html">Main Page</a></li>
-                <li class="header"><a class="header" href="articles.html">Articles</a></li>
-                <li class="header"><a class="header" href="community.html">Community</a></li>
-                <li class="header"><a class="header" href="servers.html">Servers</a></li>
-                <li class="header"><a class="header" href="about.html">About us</a></li>
+                <li class="header"><a class="header" href="../index.html">Main Page</a>
+                </li>
+                <li class="header"><a class="header" href="articles.html">Articles</a>
+                </li>
+                <li class="header"><a class="header" href="community.html">Community</a>
+                </li>
+                <li class="header"><a class="header" href="servers.html">Servers</a>
+                </li>
+                <li class="header"><a class="header" href="about.html">About us</a>
+                </li>
             </ul>
         </header>
         <div class="maincontent">
+            <div id="faq">
+                <h2>Frequently Asked Questions</h2>
+                <xml>
+                    <faq>
+                        <questions>
+                            <question>When is the exam for IT2805</question>
+                            <answer> 15. December</answer>
+                        </questions>
+                        <questions>
+                            <question>Will we pass the exam?</question>
+                            <answer>I'll go ask the shaman</answer>
+                        </questions>
+                        <questions>
+                            <question>What school are you attending?</question>
+                            <answer>NTNU</answer>
+                        </questions>
+                        <questions>
+                            <question>What course is this?</question>
+                            <answer>IT2805</answer>
+                        </questions>
+                    </faq>
 
-            <h1>Frequently Asked Questions</h1>
-            <xml>
-                <faq>
-                    <questions>
-                        <question>What is the meaning of life?</question>
-                        <answer>42</answer>
-                    </questions>
-                    <questions>
-                        <question>Is there a god?</question>
-                        <answer>Who cares</answer>
-                    </questions>
-                    <questions>
-                        <question>What school are you attending?</question>
-                        <answer>NTNU</answer>
-                    </questions>
-                    <questions>
-                        <question>What course is this?</question>
-                        <answer>IT2805</answer>
-                    </questions>
-                </faq>
-
-            </xml>
+                </xml>
+            </div>
         </div>
         <footer>
             <p>This is footer!</p>
