Added link to serverlist.html in server.html

--- a/pages/servers.html
+++ b/pages/servers.html
@@ -38,9 +38,10 @@
                     </select>
                 </div>
                 <div id="servers">
-                
-                    <div id="servers-content">Choose game</div>
 
+                    <div id="servers-content">Choose game</div>
+                </div>
+                <div id="link"><a href="serverlist.html">Add your own servers!</a>
                 </div>
             </div>
         </div>
