--- a/pages/articles.html
+++ b/pages/articles.html
@@ -57,13 +57,9 @@
                         <iframe class="article" src="https://www.youtube.com/embed/H1AmwzIK7Yk?rel=0" frameborder="0" allowfullscreen> Y u no support iframe?</iframe>
                         <div class="innerarticle">
                             <h1>Binding of Isaac rebirth</h1>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
+                            <p>Binding of Isaac: Rebirth is a game. It's a pretty fun game. I would recommend checking it out. If you are the kind of person that enjoys one of these things; fun, enjoyment, games, food, breathing or other similar activities I would recommend this game for YOOOOUUUU.</p>
+                            <p>The game is fast-paced, fun, high skill floor and cap, you meet the devil and you shoot tears at poop. What's there not to like?</p>
+                            <p>Hi! Billy Mays here! For oxymoron cleaner! Do you enjoy a clean stove?! Why not try Binding of Isaac: Rebirth?! Do it! Have fun! Enjoy life as it was meant to be enjoyed! With Oxymoron Cleaner, and an unhealthy dose of Binding of Isaac!</p>
 							<a href="articles/bindingofisaac.html" class="innerarticle">Read more here</a>
                         </div>
                     </li>
@@ -72,13 +68,8 @@
                         <iframe class="article" src="https://www.youtube.com/embed/j-hXQ1oEn84?rel=0" frameborder="0" allowfullscreen> Y u no support iframe?</iframe>
                         <div class="innerarticle">
                             <h1>League of Legends</h1>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
+                            <p>The apparent outburst of increasingly big words in this sentence is apparent. Ubiquitous. Boom! Big word. League of Legend is also big. It's ubiquitous. Everyone and their grandmother is now playing League of Legends. If you enjoy a PvP-environment, highly intense battles or maybe you're just a sheeple who likes to follow trends League of Legends is for you!</p>
+                            <p>The biggest game of writing, League of Legends boasts millions of player on a monthly basis. Easily beating out such big names as Oregon Trail, Spacewars, that one game your hipster friend is always talking about and the internet game only known as The Game (which you just lost).</p>
 							<a href="articles/bindingofisaac.html" class="innerarticle">Read more here</a>
                         </div>
                     </li>
