fixed typos, added no words

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -68,8 +68,8 @@
                         <iframe class="article" src="https://www.youtube.com/embed/j-hXQ1oEn84?rel=0" frameborder="0" allowfullscreen> Y u no support iframe?</iframe>
                         <div class="innerarticle">
                             <h1>League of Legends</h1>
-                            <p>The apparent outburst of increasingly big words in this sentence is apparent. Ubiquitous. Boom! Big word. League of Legend is also big. It's ubiquitous. Everyone and their grandmother is now playing League of Legends. If you enjoy a PvP-environment, highly intense battles or maybe you're just a sheeple who likes to follow trends League of Legends is for you!</p>
-                            <p>The biggest game of writing, League of Legends boasts millions of player on a monthly basis. Easily beating out such big names as Oregon Trail, Spacewars, that one game your hipster friend is always talking about and the internet game only known as The Game (which you just lost). To read more click the button aptly named read more</p>
+                            <p>The apparent outburst of increasingly big words in this sentence is apparent. Ubiquitous. Boom! Big word. League of Legend is also big. It's ubiquitous. Everyone and their grandmother is now playing League of Legends. If you enjoy a PvP-environment, highly intense battles or maybe you're just a sheeple who likes to follow trends, League of Legends is for you!</p>
+                            <p>The biggest game as of now, League of Legends boasts millions of player on a monthly basis. Easily beating out such big names as Oregon Trail, Spacewars, that one game your hipster friend is always talking about and the internet game only known as The Game (which you just lost). To read more click the button aptly named read more!</p>
 							<a href="articles/bindingofisaac.html" class="innerarticle">Read more here</a>
                         </div>
                     </li>
