--- a/pages/serverlist.html
+++ b/pages/serverlist.html
@@ -13,10 +13,10 @@
                 <h1 class="centered">Student-Gaming</h1>
                 <ul class="header">
                     <li class="header"><a class="header" href="../index.html">Main Page</a></li>
-                    <li class="header"><a class="header" href="articles.html">Articles</a></li>
-                    <li class="header"><a class="header" href="community.html">Community</a></li>
-                    <li class="header"><a class="header" href="servers.html">Servers</a></li>
-                    <li class="header"><a class="header" href="about.html">About us</a></li>
+                    <li class="header"><a class="header" href="../pages/articles.html">Articles</a></li>
+                    <li class="header"><a class="header" href="../pages/community.html">Community</a></li>
+                    <li class="header"><a class="header" href="../pages/servers.html">Servers</a></li>
+                    <li class="header"><a class="header" href="../pages/about.html">About us</a></li>
                 </ul>
             </header>
             <div class="maincontent">
@@ -38,7 +38,10 @@
                     </form>
                 </div>
             </div>
-            <footer>
-                <p>This is footer!</p>
-                <a class="footer" href="pages/about.html">About us/Contact us here</a>
-       
+        <footer>
+            <p>This is footer!</p>
+            <a class="footer" href="pages/about.html">About us/Contact us here</a>
+        </footer>
+    </div>
+    </body>
+</html>
