--- a/pages/community.html
+++ b/pages/community.html
@@ -5,6 +5,7 @@
         <title>Community</title>
         <meta name="description" content="Basic Template">
         <link rel="stylesheet" href="../main.css">
+        <link rel="stylesheet" href="community.css">
     </head>
     <body>
         <div id="wrapper">
@@ -20,7 +21,17 @@
             </header>
             <div class="maincontent">
                 <div class="innercontent">
-                    <h1>This is where we'll put up the community</h1>
+                    <h1>Community</h1>
+
+                    <p>This is the site where we'd put the forums, chats etc. but since implementing these are beyond the curriculum we feel that it is unnecessary to do so. 
+
+                    The image below is an example of how we might have done the forums. 
+                <br>
+                    Image is taken from <a href="http://www.adkgamers.com/">adkgamers.com</a>
+                    </p>
+                    <div id="img"></div>
+
+                    
                 </div>
             </div>
             <footer>
