--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Insert Title Here</title>
+        <title>Sitemap</title>
         <meta name="description" content="Basic Template">
         <link rel="stylesheet" href="../main.css">
         <link rel="stylesheet" href="sitemap.css">
@@ -21,20 +21,21 @@
             </header>
             <div class="maincontent">
                 <div class="innercontent">
+                    
                     <h1>Sitemap</h1>
                     <hr>
-                    <h3><a href="articles.html">Articles</a></h3>
-                    <p><a href="articles/bindingofisaac.html">Binding of Isaac: Rebirth</a></p>
-                    <p><a href="articles/leagueoflegends.html">League of Legends</a></p>
+                    <h3 class="sitemaplink"><a href="articles.html">Articles</a></h3>
+                    <p class="sitemaplink"><a href="articles/bindingofisaac.html">Binding of Isaac: Rebirth</a></p>
+                    <p class="sitemaplink"><a href="articles/leagueoflegends.html">League of Legends</a></p>
                     <hr>
-                    <h3><a href="community.html">Community</a></h3>
+                    <h3 class="sitemaplink"><a href="community.html">Community</a></h3>
                     <p></p>
                     <hr>
-                    <h3><a href="servers.html">Servers</a></h3>
-                    <p><a href="serverlist.html">Serverlist</a></p>
+                    <h3 class="sitemaplink"><a href="servers.html">Servers</a></h3>
+                    <p class="sitemaplink"><a href="serverlist.html">Serverlist</a></p>
                     <hr>
-                    <h3><a href="about.html">About us</a></h3>
-                    <p><a href="faq.html">FAQ</a></p>
+                    <h3 class="sitemaplink"><a href="about.html">About us</a></h3>
+                    <p class="sitemaplink"><a href="faq.html">FAQ</a></p>
                 </div>
             </div>
             <footer>
