--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -12,7 +12,7 @@
             <header>
                 <h1 class="centered">Student-Gaming</h1>
                 <ul class="header">
-                    <li class="header"><a class="header" href="index.html">Main Page</a></li>
+                    <li class="header"><a class="header" href="../index.html">Main Page</a></li>
                     <li class="header"><a class="header" href="articles.html">Articles</a></li>
                     <li class="header"><a class="header" href="community.html">Community</a></li>
                     <li class="header"><a class="header" href="servers.html">Servers</a></li>
