added text to articles

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -42,13 +42,7 @@
                         <iframe class="article" src="https://www.youtube.com/embed/PjqsYzBrP-M?rel=0" frameborder="0" allowfullscreen> Y u no support iframe?</iframe>
                         <div class="innerarticle">
                             <h1>Elder Scrolls V: Skyrim</h1>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
-                            <p>blablabla</p>
+                            <p>Skyrim's main story revolves around the player character's efforts to defeat Alduin the world eater, a Dragon who is prophesied to destroy the world. Set two hundred years after the events of Oblivion, the game takes place in the fictional province of Skyrim. Over the course of the game, the player completes quests and develops their character by improving their skills. Unlike previous Elder Scrolls games, Skyrim does not require the player to select a character class at the beginning of the game, negating a problem the development team felt previous entries had by forcing the player into a rigid play-style too early in the game. Skyrim continues the open-world tradition of its predecessors by allowing the player to travel anywhere in the game world at any time, and to ignore or postpone the main storyline indefinitely.</p>
 							<a href="articles/bindingofisaac.html" class="innerarticle">Read more here</a>
                         </div>
                     </li>
