Fixed som articles

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -34,7 +34,7 @@
                             <p>The game features fast-paced shooting segments and detail-rich character development for Shepard and his entire crew. It also features a few strategical elements where you can use your crews abilities and specs. to your advantage in combat</p>
                             <p>This is a game for the ones who really like a good and lore-filled story that can be explored as much as you want.</p>
 							<p>This is a trilogy and the savegames from each game is carried over to the next. That means that all your choices will have a major impact on the story</p>
-							<a href="articles/bindingofisaac.html" class="innerarticle">Read more here</a>
+							<a href="articles/masseffect.html" class="innerarticle">Read more here</a>
                         </div>
                     </li>
                     
