Fixed community image

--- a/pages/community.html
+++ b/pages/community.html
@@ -20,16 +20,16 @@
                 </ul>
             </header>
             <div class="maincontent">
+				<h1>Community</h1>
+
+				<p>This is the site where we'd put the forums, chats etc. but since implementing these are beyond the curriculum we feel that it is unnecessary to do so. 
+
+				The image below is an example of how we might have done the forums. 
+			<br>
+				Image is taken from <a href="http://www.adkgamers.com/">adkgamers.com</a>
+				</p>
+				<img id="forum" src="../img/forumExample.png">
                 <div class="innercontent">
-                    <h1>Community</h1>
-
-                    <p>This is the site where we'd put the forums, chats etc. but since implementing these are beyond the curriculum we feel that it is unnecessary to do so. 
-
-                    The image below is an example of how we might have done the forums. 
-                <br>
-                    Image is taken from <a href="http://www.adkgamers.com/">adkgamers.com</a>
-                    </p>
-                    <div id="img"></div>
 
                     
                 </div>
