--- a/pages/community.html
+++ b/pages/community.html
@@ -28,7 +28,7 @@
 			<br>
 				Image is taken from <a href="http://www.adkgamers.com/">adkgamers.com</a>
 				</p>
-				<img id="forum" src="../img/forumExample.png">
+				<img id="forum" src="../img/forumExample.png" alt="Forum example">
             </div>
             <footer>
                 <a class="footer" href="about.html">About us/Contact us here</a>
